--- a/client/public/src/app/dashboard/dashboard.component.html
+++ b/client/public/src/app/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
       <th scope="col">Restaurant</th>
       <th scope="col">Cuisine</th>
       <th scope="col">Available actions</th>
+      <th scope="col">Edit Restaurant</th>
     </tr>
   </thead>
   <tbody>
@@ -12,9 +13,29 @@
       <td>{{restaurant.cuisine}}</td>
       <td>
         <button type="button" class="btn btn-info btn-sm" [routerLink]="['/restaurant',restaurant._id]">Read Reviews</button>
-        <button type="button" class="btn btn-warning btn-sm ml-2 mr-2" [routerLink]="['/edit',restaurant._id]">Update</button>
+        
+        <button type="button" class="btn btn-warning btn-sm ml-2 mr-2" (click)="showEdit(restaurant)">Update</button>
+
         <button *ngIf="restaurant.deletable" type="button" class="btn btn-danger btn-sm" (click)="deleteRestaurant(restaurant._id)">Delete</button>
       </td>
-    </tr>
+      <td>
+        <div *ngIf="restaurant.showEditPanel">
+            <form (submit)="editRestaurant(restaurant)" class="mt-2 mb-2">
+                <label>Name:</label>
+                <input type="text" class="form-control" name="restaurant.name" [(ngModel)]="restaurant.name">
+                <div *ngIf="errors['name']" class="alert alert-danger mt-2" role="alert">
+                    {{errors['name']['message']}}
+                </div>
+                <label>Cuisine:</label>
+                <input type="text" class="form-control" name="restaurant.cuisine" [(ngModel)]="restaurant.cuisine">
+                <div *ngIf="errors['cuisine']" class="alert alert-danger mt-2" role="alert">
+                    {{errors['cuisine']['message']}}
+                  </div>
+                <button type="submit" class="btn btn-primary float-right ml-2 mt-2 mb-2 mr-2">Update</button>
+                <button type="button" class="btn btn-light float-right mt-2 mb-2" (click)="cancelUpdate(restaurant)">Cancel</button>
+            </form>
+          </div>
+        </td>
+        </tr>
   </tbody>
 </table>
